<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
            android:text="User Activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="(IN_VEHICLE, ON_BICYCLE, ON_FOOT, STILL, UNKNOWN, TILTING, WALKING, RUNNING)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"/>

    <TextView
            android:id="@+id/tv_activity"
            android:text="@string/getting_activity"
            android:textSize="18sp"
            android:textColor="#333333"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="Current Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/tv_location"
            android:text="@string/getting_location"
            android:textSize="18sp"
            android:textColor="#333333"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="Current Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/tv_address"
            android:text="@string/getting_address"
            android:textSize="18sp"
            android:textColor="#333333"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="Current Places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/tv_places"
            android:text="@string/getting_places"
            android:textSize="18sp"
            android:textColor="#333333"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="Current Weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

    <TextView
            android:text="(Unknown, Clear, Cloudy, Foggy, Hazy, Icy, Snowy, Stormy, Windy)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"/>

    <TextView
            android:id="@+id/tv_weather"
            android:text="@string/getting_weather"
            android:textSize="18sp"
            android:textColor="#333333"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
